--- a/Session2/frontend/package.json
+++ b/Session2/frontend/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "4",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
